website/versioned_docs/version-2.4.0/how_to_use_cube.md
---
id: how_to_use_cube
title: 'キューブの使い方'
sidebar_label: '🔄 キューブの使い方'
original_id: how_to_use_cube
---

## 充電方法

![How to charge](assets/cube_basics_charging.svg)

キューブはコンソールの充電台またはキューブ専用充電器に乗せることで充電できます。詳しい説明やキューブの電池残量の確認方法については[各種マニュアル](https://toio.io/manual)をご覧ください。

## 電源の入れ方・切り方

![How to power on off](assets/cube_basics_power_on_off.svg)

キューブの底面に電源ボタンがあります。電源ボタンを押すとキューブの電源が入ります。
また、電源ボタンを長押しすると電源を切ることができます。

## オートパワーオフ機能

キューブとの通信は Bluetooth Low Energy (BLE) で行いますが、キューブが BLE で他のデバイスと未接続な状態が 15 分間続くと自動的に電源が切れます。また、BLE 未接続な状態の間は 3 分おきに報知音が鳴ります。

キューブとの通信に関しては[通信概要 - キューブとの通信について](ble_communication_overview.md#キューブとの通信について)をご覧ください。

## システム状態 <span class="update"/>

![Light of cube](assets/cube_basics_light.svg)

キューブのシステム状態に関して、ランプの色と音で通知します。条件は以下のとおりです。

| キューブの状態  | ランプ                                         | 音       |
| --------------- | ---------------------------------------------- | -------- |
| 起動            | 赤色・青色・緑色・白色を順に<br/> 1 回づつ点滅 | ○ 音あり |
| 接続待ち        | 青色点滅                                       | ☓ 音なし |
| 接続            | 消灯                                           | ○ 音あり |
| 切断            | 消灯                                           | ○ 音あり |
| 終了            | 消灯                                           | ○ 音あり |
| toio PlayGround | 黄色点滅                                       | ○ 音あり |

### toio PlayGround（黄色点滅）について <span class="new"/>

キューブが[toio PlayGround](https://toio.io/titles/playground.html)（黄色点滅）の状態では、キューブは外部からのBluetooth接続を受け入れません。

#### toio PlayGround への遷移

キューブが接続待ち（青色点滅）の状態でボタンを長押しすると[toio PlayGround](https://toio.io/titles/playground.html)に遷移します。

#### toio PlayGround からの復帰

[toio PlayGround](https://toio.io/titles/playground.html)から通常の接続可能状態に戻るには、キューブの電源を一度オフにしてから再度オンしてください。

## 電池残量の確認

キューブの電源が入っているときに電源ボタンを押すとおおよその電池残量をランプの色と音で通知します。電池残量とランプの状態は以下のとおりです。ランプの点滅に合わせて音も鳴ります。

| 電池残量               | ランプ          | 音                          |
| ---------------------- | --------------- | --------------------------- |
| 電池残量が十分にある   | 緑色に 3 回点滅 | ランプの点滅に合わせて 3 回 |
| 電池残量が少ない       | 黄色に 2 回点滅 | ランプの点滅に合わせて 2 回 |
| 電池残量がほとんどない | 赤色に 1 回点滅 | ランプの点滅に合わせて 1 回 |
